* Fri Mar 03 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Modify GridSiteDelegationURI directive to insert HTTP 
  headers instead of modifying HTML
* Mon Feb 6 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Add GridSiteDelegationURI directive to mod_gridsite
  to allow Firefox extension to locate delegation service
* Thu Jan 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add 5 minute window for VOMS attributes valid slightly
  in the future.
- Include Content-Range PUT support in mod_gridsite,
  adapted from mod_dav by David O Callaghan
- Return 201 Created when PUT creates a file
* Mon Dec 5 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Change GRIDHTTP_ONETIME to GRIDHTTP_PASSCODE 
- Remove onetime=yes default from mod_gridsite
- Update gridsite.spec and Makefile for gridsite-copy.cgi
* Wed Nov 16 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.16 ====
* Wed Nov 16 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add -fPIC option to Makefile for IA64, as suggested
  by Andreas Unterkircher.
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.15 ====
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix for older OpenSSL to grst_x509.c from
  Zoltan.Farkas <Zoltan.Farkas@cern.ch>
* Wed Oct 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.14 ====
* Tue Oct 11 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Modify VOMS AC parsing to handle multiple ACs inside
  the same X.509 AC extension.
* Mon Oct 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.13 ====
* Mon Oct 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add target_gname patch to gsexec from
  Gerben Venekamp <venekamp@nikhef.nl>
* Thu Oct 6 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix session reuse with Shared-Memory SSL Session
  Cache bug #8856 in mod_gridsite.
- Add SiteCast support to file copying in htcp.
* Tue Oct 4 2005 Andrew McNab <Andrew.McNab@man.ac.uk>