@@ -1,4 +1,4 @@
 MAJOR_VERSION=1
 MINOR_VERSION=1.1
-PATCH_VERSION=1.1.15
+PATCH_VERSION=1.1.17
 VERSION=$(PATCH_VERSION)
